--- a/agenda.html
+++ b/agenda.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Agenda</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=3764751454"/>
-  <link rel="stylesheet" type="text/css" href="css/agenda.css?crc=3813346647" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=340124142"/>
+  <link rel="stylesheet" type="text/css" href="css/agenda.css?crc=3934219456" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_agenda.css?crc=347518926"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_agenda.css?crc=4031558529"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -29,7 +29,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n6,n7,n3,n4,i3,i4:default.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4,i3,n6,n7,n3,i4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -37,18 +37,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="u12998"><!-- group -->
-    <div class="clearfix grpelem" id="u12999-8"><!-- content -->
-     <p id="u12999-2">Convención Nacional</p>
-     <p id="u12999-4">Protección Civil</p>
-     <p id="u12999-6">SAN LUIS POTOSÍ * 2016</p>
-    </div>
-    <div class="clip_frame grpelem" id="u13000"><!-- svg -->
-     <img class="svg" id="u13001" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-    </div>
-   </div>
-   <div class="clearfix grpelem" id="pu12918"><!-- column -->
+  <div class="clearfix borderbox" id="page"><!-- column -->
+   <div class="position_content" id="page_position_content">
     <div class="browser_width colelem" id="u12918-bw">
      <div id="u12918"><!-- group -->
       <div class="clearfix" id="u12918_align_to_page">
@@ -64,6 +54,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="SubMenu MenuLevel1 clearfix" id="u34166"><!-- vertical box -->
           <ul class="SubMenuView clearfix colelem" id="u34167"><!-- vertical box -->
            <li class="MenuItemContainer clearfix colelem" id="u34381"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34383" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34387-4"><!-- content --><p>Sede</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u36346"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u36347" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36350-4"><!-- content --><p>Video</p></div></a></li>
           </ul>
          </div>
         </div>
@@ -151,35 +142,31 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="block" id="u13692_img" src="images/scrolldown.gif?crc=4242453415" alt="" data-image-width="40" data-image-height="40"/>
      </div>
     </div>
-   </div>
-   <a class="nonblock nontext Button clearfix" id="buttonu13007" href="registro.html"><!-- container box --><div class="clearfix grpelem" id="u13008-4"><!-- content --><p>REGISTRO</p></div></a>
-   <div class="verticalspacer" data-offset-top="803" data-content-above-spacer="803" data-content-below-spacer="61"></div>
-   <div class="clearfix grpelem" id="u13003"><!-- group -->
-    <div class="clearfix grpelem" id="u13006-8"><!-- content -->
-     <p id="u13006-2">Convención Nacional</p>
-     <p id="u13006-4">Protección Civil</p>
-     <p id="u13006-6">SAN LUIS POTOSÍ * 2016</p>
-    </div>
-    <div class="clip_frame grpelem" id="u13004"><!-- svg -->
-     <img class="svg" id="u13005" src="images/logopc.svg?crc=3794957760" width="32" height="32" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-    </div>
-   </div>
-   <div class="browser_width grpelem" id="u13002-bw">
-    <div id="u13002"><!-- group -->
-     <div class="clearfix" id="u13002_align_to_page">
-      <div class="clearfix grpelem" id="u27488"><!-- group -->
-       <div class="clip_frame grpelem" id="u27489"><!-- image -->
-        <img class="block" id="u27489_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="40" data-image-height="70"/>
+    <a class="nonblock nontext Button clearfix pinned-colelem" id="buttonu13007" href="registro.html"><!-- container box --><div class="clearfix grpelem" id="u13008-4"><!-- content --><p>REGISTRO</p></div></a>
+    <div class="verticalspacer" data-offset-top="803" data-content-above-spacer="803" data-content-below-spacer="62"></div>
+    <div class="browser_width colelem" id="u13002-bw">
+     <div id="u13002"><!-- group -->
+      <div class="clearfix" id="u13002_align_to_page">
+       <div class="clearfix grpelem" id="u27488"><!-- group -->
+        <div class="clip_frame grpelem" id="u27489"><!-- image -->
+         <img class="block" id="u27489_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="40" data-image-height="70"/>
+        </div>
+        <div class="clearfix grpelem" id="u27491"><!-- group -->
+         <div class="clearfix grpelem" id="u27494-9"><!-- content -->
+          <p id="u27494-2">III Convención Nacional</p>
+          <p id="u27494-4">Protección Civil</p>
+          <p id="u27494-7"><span id="u27494-5">SAN LUIS POTOSÍ</span> | 2016</p>
+         </div>
+         <div class="clip_frame grpelem" id="u27492"><!-- svg -->
+          <img class="svg" id="u27493" src="images/logopc.svg?crc=3794957760" width="50" height="47" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
+         </div>
+        </div>
        </div>
-       <div class="clearfix grpelem" id="u27491"><!-- group -->
-        <div class="clearfix grpelem" id="u27494-9"><!-- content -->
-         <p id="u27494-2">III Convención Nacional</p>
-         <p id="u27494-4">Protección Civil</p>
-         <p id="u27494-7"><span id="u27494-5">SAN LUIS POTOSÍ</span> | 2016</p>
-        </div>
-        <div class="clip_frame grpelem" id="u27492"><!-- svg -->
-         <img class="svg" id="u27493" src="images/logopc.svg?crc=3794957760" width="50" height="47" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-        </div>
+       <div class="clip_frame grpelem" id="u37058"><!-- svg -->
+        <img class="svg" id="u37059" src="images/gobmxlogo.svg?crc=1878811" alt="" data-mu-svgfallback="images/gobmxlogo_poster_.png?crc=3819646527" data-image-width="126" data-image-height="39"/>
+       </div>
+       <div class="clip_frame grpelem" id="u37060"><!-- svg -->
+        <img class="svg" id="u37061" src="images/logo_mexico.svg?crc=3762957058" alt="" data-mu-svgfallback="images/logo_mexico_poster_.png?crc=4197092919" data-image-width="172" data-image-height="70"/>
        </div>
       </div>
      </div>
