--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Inicio</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=89280430" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4049315692" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=58876188"/>
@@ -54,9 +54,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
         <div class="SSSlide invi clip_frame grpelem" id="u1737"><!-- image -->
          <img class="ImageInclude" id="u1737_img" data-src="images/092_028__bannergrey_1426681836_standard3.jpg?crc=4023459426" src="images/blank.gif?crc=4208392903" alt="" data-width="1409" data-height="620"/>
-        </div>
-        <div class="SSSlide invi clip_frame grpelem" id="u1757"><!-- image -->
-         <img class="ImageInclude" id="u1757_img" data-src="images/092_028__plains_1433245648_standard.jpg?crc=3885592290" src="images/blank.gif?crc=4208392903" alt="" data-width="1409" data-height="620"/>
         </div>
         <div class="SSSlide invi clip_frame grpelem" id="u1777"><!-- image -->
          <img class="ImageInclude" id="u1777_img" data-src="images/092_028__plains_1433245648_standard3.jpg?crc=340009490" src="images/blank.gif?crc=4208392903" alt="" data-width="1409" data-height="620"/>
@@ -116,9 +113,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
         <div class="SSSlideLink museBGSize clip_frame grpelem" id="u1743"><!-- image -->
          <img class="block" id="u1743_img" src="images/092_028__bannergrey_1426681836_standard3-crop-u1743.jpg?crc=3840691992" alt="" width="21" height="1"/>
-        </div>
-        <div class="SSSlideLink museBGSize clip_frame grpelem" id="u1763"><!-- image -->
-         <img class="block" id="u1763_img" src="images/092_028__plains_1433245648_standard-crop-u1763.jpg?crc=51219071" alt="" width="23" height="1"/>
         </div>
         <div class="SSSlideLink museBGSize grpelem" id="u1783"><!-- image --></div>
         <div class="SSSlideLink museBGSize clip_frame grpelem" id="u1803"><!-- image -->
@@ -227,6 +221,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="SubMenu MenuLevel1 clearfix" id="u34183"><!-- vertical box -->
            <ul class="SubMenuView clearfix colelem" id="u34184"><!-- vertical box -->
             <li class="MenuItemContainer clearfix colelem" id="u34407"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34409" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34413-4"><!-- content --><p>Sede</p></div></a></li>
+            <li class="MenuItemContainer clearfix colelem" id="u36325"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u36328" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36331-4"><!-- content --><p>Video</p></div></a></li>
            </ul>
           </div>
          </div>
@@ -346,7 +341,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="museBGSize clearfix colelem" id="u2061-20"><!-- content -->
      <p id="u2061">&nbsp;</p>
-     <p id="u2061-3">Ocho Conferencias Magistrales</p>
+     <p id="u2061-3">Diez Conferencias Magistrales</p>
      <p id="u2061-4">&nbsp;</p>
      <p id="u2061-5">&nbsp;</p>
      <p id="u2061-7">Marco de Sendai: lecciones aprendidas y retos para el futuro</p>
@@ -390,10 +385,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <ul class="AccordionWidget clearfix grpelem" id="accordionu2134"><!-- vertical box -->
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2135"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2138-4"><!-- content --><div id="u2138-3"><p>DESCARGAS</p></div></div><div class="AccordionPanelContent borderbox clearfix colelem" id="u2136"><!-- group --><div class="clearfix grpelem" id="u2137-8"><!-- content --><p>Aquí encontraras toda la información relativa a la</p><p>III Convención Nacional de Protección Civil</p><p>No te pierdas ninguna de las ponencias y talleres que hemos diseñado pensando en ti</p></div></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2143"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2144-4"><!-- content --><div id="u2144-3"><p>Agenda Rápida</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2145"><!-- group --><a class="nonblock nontext museBGSize clearfix grpelem" id="u2146-3" href="assets/agenda-rapida-28jun2016.pdf" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2139"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2140-4"><!-- content --><div id="u2140-3"><p>Agenda Completa</p></div></div><div class="pointer_cursor AccordionPanelContent disn borderbox clearfix colelem" id="u2141"><!-- group --><a class="block" target="_blank" href="assets/agenda-28jun2016.pdf"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2142-3" href="assets/agenda-28jun2016.pdf" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
-      <li class="AccordionPanel borderbox clearfix colelem" id="u2173"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2176-4"><!-- content --><div id="u2176-3"><p>Folleto Informativo</p></div></div><div class="pointer_cursor AccordionPanelContent disn borderbox clearfix colelem" id="u2174"><!-- group --><a class="block" href="assets/folleto-convencion-28jun2016.pdf"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2206-3" href="assets/folleto-convencion-28jun2016.pdf" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2135"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2138-4"><!-- content --><div id="u2138-3"><p>DESCARGAS</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2136"><!-- group --><div class="clearfix grpelem" id="u2137-8"><!-- content --><p>Aquí encontraras toda la información relativa a la</p><p>III Convención Nacional de Protección Civil</p><p>No te pierdas ninguna de las ponencias y talleres que hemos diseñado pensando en ti</p></div></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2143"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2144-4"><!-- content --><div id="u2144-3"><p>Agenda Rápida</p></div></div><div class="AccordionPanelContent disn borderbox clearfix colelem" id="u2145"><!-- group --><a class="nonblock nontext museBGSize clearfix grpelem" id="u2146-3" href="href://#" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2139"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2140-4"><!-- content --><div id="u2140-3"><p>Agenda Completa</p></div></div><div class="pointer_cursor AccordionPanelContent disn borderbox clearfix colelem" id="u2141"><!-- group --><a class="block" target="_blank" href="href://#"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2142-3" href="assets/agenda-28jun2016.pdf" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
+      <li class="AccordionPanel borderbox clearfix colelem" id="u2173"><!-- vertical box --><div class="AccordionPanelTab borderbox clearfix colelem" id="u2176-4"><!-- content --><div id="u2176-3"><p>Folleto Informativo</p></div></div><div class="pointer_cursor AccordionPanelContent borderbox clearfix colelem" id="u2174"><!-- group --><a class="block" href="href://#"></a><a class="nonblock nontext museBGSize clearfix grpelem" id="u2206-3" href="assets/folleto-convencion-28jun2016.pdf" target="_blank"><!-- content --><p>&nbsp;</p></a></div></li>
      </ul>
      <div class="grpelem" id="u12103"><!-- custom html -->
       <a class="twitter-timeline" href="https://twitter.com/LUISFELIPE_P" data-tweet-limit="2" data-chrome="nofooter transparent noheader noborders" data-link-color="#88CBC7"  data-theme="dark" >Tweets de LUISFELIPE_P</a> 
@@ -430,6 +425,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </div>
         </div>
        </div>
+       <div class="clip_frame grpelem" id="u37076"><!-- svg -->
+        <img class="svg" id="u37077" src="images/gobmxlogo.svg?crc=1878811" alt="" data-mu-svgfallback="images/gobmxlogo_poster_.png?crc=3819646527" data-image-width="126" data-image-height="39"/>
+       </div>
+       <div class="clip_frame grpelem" id="u37078"><!-- svg -->
+        <img class="svg" id="u37079" src="images/logo_mexico.svg?crc=3762957058" alt="" data-mu-svgfallback="images/logo_mexico_poster_.png?crc=4197092919" data-image-width="172" data-image-height="70"/>
+       </div>
       </div>
      </div>
     </div>
@@ -457,7 +458,7 @@ Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized');
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('#slideshowu1577', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:true,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'fullWidth',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu1577 */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
-Muse.Utils.initWidget('#accordionu2134', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:false,defaultIndex:0}); });/* #accordionu2134 */
+Muse.Utils.initWidget('#accordionu2134', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Accordion(elem, {canCloseAll:false,defaultIndex:3}); });/* #accordionu2134 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(a){if(a&&"function"==typeof a.notify?a.notify():Muse.Assert.fail("Error calling selector function: "+a),false)throw a;}})})};
