--- a/registro.html
+++ b/registro.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Registro</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=183329274" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/registro.css?crc=423798142" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_registro.css?crc=3925074953"/>
@@ -37,35 +37,39 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="browser_width" id="u34776-bw">
-    <div id="u34776"><!-- simple frame --></div>
-   </div>
-   <div class="grpelem" id="u2995"><!-- simple frame --></div>
-   <div id="u34835-wrapper">
-    <div class="clearfix" id="u34835"><!-- group -->
-     <div id="u34838-wrapper">
-      <div class="clearfix" id="u34838"><!-- group -->
-       <div id="u34841-wrapper">
-        <div class="clip_frame" id="u34841"><!-- image -->
-         <img class="block" id="u34841_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
+   <div class="clearfix grpelem" id="pu34776"><!-- group -->
+    <div class="browser_width" id="u34776-bw">
+     <div id="u34776"><!-- simple frame --></div>
+    </div>
+    <div id="u34835-wrapper">
+     <div class="clearfix" id="u34835"><!-- group -->
+      <div id="u34838-wrapper">
+       <div class="clearfix" id="u34838"><!-- group -->
+        <div id="u34841-wrapper">
+         <div class="clip_frame" id="u34841"><!-- image -->
+          <img class="block" id="u34841_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
+         </div>
         </div>
-       </div>
-       <div class="clearfix" id="u34839"><!-- group -->
-        <div class="clearfix" id="u34840-9"><!-- content -->
-         <p id="u34840-2">III Convención Nacional</p>
-         <p id="u34840-4">Protección Civil</p>
-         <p id="u34840-7"><span id="u34840-5">SAN LUIS POTOSÍ</span> | 2016</p>
+        <div class="clearfix" id="u34839"><!-- group -->
+         <div class="clearfix" id="u34840-9"><!-- content -->
+          <p id="u34840-2">III Convención Nacional</p>
+          <p id="u34840-4">Protección Civil</p>
+          <p id="u34840-7"><span id="u34840-5">SAN LUIS POTOSÍ</span> | 2016</p>
+         </div>
         </div>
        </div>
       </div>
-     </div>
-     <div class="clip_frame" id="u34836"><!-- svg -->
-      <img class="svg" id="u34837" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
+      <div class="clip_frame" id="u34836"><!-- svg -->
+       <img class="svg" id="u34837" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
+      </div>
      </div>
     </div>
    </div>
+   <div class="browser_width grpelem" id="u2995-bw">
+    <div id="u2995"><!-- simple frame --></div>
+   </div>
    <div class="grpelem" id="u3013"><!-- custom html -->
-    <iframe src="https://docs.google.com/forms/d/1d3zYCDhO73smh6KalFSq1jbpZnL-giu-hnfKdu24pc4/viewform?embedded=true" width="760" height="1150" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
+    <iframe src="https://docs.google.com/forms/d/1d3zYCDhO73smh6KalFSq1jbpZnL-giu-hnfKdu24pc4/viewform?embedded=true" width="760" height="1900" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
    </div>
    <div class="clearfix grpelem" id="pmenuu34777"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu34777"><!-- horizontal box -->
@@ -77,6 +81,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="SubMenu MenuLevel1 clearfix" id="u34783"><!-- vertical box -->
        <ul class="SubMenuView clearfix colelem" id="u34784"><!-- vertical box -->
         <li class="MenuItemContainer clearfix colelem" id="u34785"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34786" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34787-4"><!-- content --><p>Sede</p></div></a></li>
+        <li class="MenuItemContainer clearfix colelem" id="u36304"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u36307" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36310-4"><!-- content --><p>Video</p></div></a></li>
        </ul>
       </div>
      </div>
@@ -103,7 +108,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1349" data-content-above-spacer="1349" data-content-below-spacer="0"></div>
+   <div class="verticalspacer" data-offset-top="2080" data-content-above-spacer="2080" data-content-below-spacer="0"></div>
    <div class="clearfix grpelem" id="pu35009"><!-- group -->
     <div class="clearfix grpelem" id="u35009"><!-- group -->
      <div class="clip_frame grpelem" id="u35010"><!-- image -->
@@ -121,6 +126,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <img class="svg" id="u35015" src="images/logopc.svg?crc=3794957760" width="44" height="48" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
     </div>
    </div>
+   <div class="clip_frame grpelem" id="u37094"><!-- svg -->
+    <img class="svg" id="u37095" src="images/gobmxlogo.svg?crc=1878811" alt="" data-mu-svgfallback="images/gobmxlogo_poster_.png?crc=3819646527" data-image-width="126" data-image-height="39"/>
+   </div>
+   <div class="clip_frame grpelem" id="u37096"><!-- svg -->
+    <img class="svg" id="u37097" src="images/logo_mexico.svg?crc=3762957058" alt="" data-mu-svgfallback="images/logo_mexico_poster_.png?crc=4197092919" data-image-width="172" data-image-height="70"/>
+   </div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -128,10 +139,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 typeof $){b();$("body").append('<div class="version" style="display:none; width:1px; height:1px;"></div>');for(var f=$(".version"),j=0;j<Muse.assets.required.length;){var h=Muse.assets.required[j],i=h.match(/([\w\-\.]+)\.(\w+)$/),k=i&&i[1]?i[1]:null,i=i&&i[2]?i[2]:null;switch(i.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.addClass(k);var i=c(f.css("color")),l=c(f.css("background-color"));i!=0||l!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof a[h]&&(i!=
 a[h]>>>24||l!=(a[h]&16777215))&&Muse.assets.outOfDate.push(h)):j++;f.removeClass(k);break;case "js":k.match(/^jquery-[\d\.]+/gi)&&typeof $!="undefined"?Muse.assets.required.splice(j,1):j++;break;default:throw Error("Unsupported file type: "+i);}}f.remove()}if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Puede que determinados archivos falten en el servidor o sean incorrectos. Limpie la cache del navegador e inténtelo de nuevo. Si el problema persiste, póngase en contacto con el administrador del sitio web.",d&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),
 alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?setTimeout(function(){d(!0)},5E3):d()}};
-var muse_init=function(){require.config({baseUrl:""});require(["museutils","whatinput","jquery.musemenu","jquery.watch"],function(){$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["museutils","whatinput","jquery.watch","jquery.musemenu"],function(){$(document).ready(function(){try{
 window.Muse.assets.check();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.showWidgetsWhenReady();/* body */
