--- a/sede.html
+++ b/sede.html
@@ -16,11 +16,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Sede</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=103117451"/>
-  <link rel="stylesheet" type="text/css" href="css/sede.css?crc=212905696" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4072327414"/>
+  <link rel="stylesheet" type="text/css" href="css/sede.css?crc=190694914" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_sede.css?crc=4257208588"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_sede.css?crc=4063148616"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -37,20 +37,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu154"><!-- group -->
-    <div class="browser_width" id="u154-bw">
-     <div id="u154"><!-- simple frame --></div>
-    </div>
-    <div class="clearfix" id="u750"><!-- group -->
-     <div class="clearfix" id="u718-8"><!-- content -->
-      <p id="u718-2">Convención Nacional</p>
-      <p id="u718-4">Protección Civil</p>
-      <p id="u718-6">SAN LUIS POTOSÍ * 2016</p>
-     </div>
-     <div class="clip_frame" id="u739"><!-- svg -->
-      <img class="svg" id="u735" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-     </div>
-    </div>
+   <div class="browser_width" id="u154-bw">
+    <div id="u154"><!-- simple frame --></div>
    </div>
    <a class="anchor_item grpelem" id="inicio"></a>
    <div class="clearfix" id="u28018"><!-- group -->
@@ -556,6 +544,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="SubMenu MenuLevel1 clearfix" id="u34138"><!-- vertical box -->
       <ul class="SubMenuView clearfix colelem" id="u34139"><!-- vertical box -->
        <li class="MenuItemContainer clearfix colelem" id="u34348"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u34350" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34354-4"><!-- content --><p>Sede</p></div></a></li>
+       <li class="MenuItemContainer clearfix colelem" id="u36367"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u36370" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36372-4"><!-- content --><p>Video</p></div></a></li>
       </ul>
      </div>
     </div>
@@ -591,33 +580,31 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <a class="nonblock nontext anim_swing clip_frame grpelem" id="u26436" href="sede.html#inicio" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=-1,M12=0,M21=0,M22=-1,SizingMethod='auto expand')" data-mu-ie-matrix-dx="0" data-mu-ie-matrix-dy="0"><!-- image --><img class="block" id="u26436_img" src="images/scrolldown.gif?crc=4242453415" alt="" width="90" height="90"/></a>
    <a class="nonblock nontext Button clearfix" id="buttonu2989" href="registro.html"><!-- container box --><div class="clearfix grpelem" id="u2990-4"><!-- content --><p>REGISTRO</p></div></a>
    <div class="verticalspacer" data-offset-top="8601" data-content-above-spacer="8600" data-content-below-spacer="127"></div>
-   <div class="clearfix grpelem" id="u774"><!-- group -->
-    <div class="clearfix grpelem" id="u756-8"><!-- content -->
-     <p id="u756-2">Convención Nacional</p>
-     <p id="u756-4">Protección Civil</p>
-     <p id="u756-6">SAN LUIS POTOSÍ * 2016</p>
-    </div>
-    <div class="clip_frame grpelem" id="u754"><!-- svg -->
-     <img class="svg" id="u755" src="images/logopc.svg?crc=3794957760" width="32" height="32" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-    </div>
-   </div>
    <div class="browser_width grpelem" id="u493-bw">
     <div id="u493"><!-- group -->
      <div class="clearfix" id="u493_align_to_page">
-      <div class="clearfix grpelem" id="u27290"><!-- group -->
-       <div class="clip_frame grpelem" id="u27291"><!-- image -->
-        <img class="block" id="u27291_img" src="images/grecas.png?crc=3872280243" alt="" width="40" height="70"/>
-       </div>
-       <div class="clearfix grpelem" id="u27293"><!-- group -->
-        <div class="clearfix grpelem" id="u27296-9"><!-- content -->
-         <p id="u27296-2">III Convención Nacional</p>
-         <p id="u27296-4">Protección Civil</p>
-         <p id="u27296-7"><span id="u27296-5">SAN LUIS POTOSÍ</span> | 2016</p>
+      <div class="clearfix grpelem" id="pu27290"><!-- group -->
+       <div class="clearfix grpelem" id="u27290"><!-- group -->
+        <div class="clip_frame grpelem" id="u27291"><!-- image -->
+         <img class="block" id="u27291_img" src="images/grecas.png?crc=3872280243" alt="" width="40" height="70"/>
+        </div>
+        <div class="clearfix grpelem" id="u27293"><!-- group -->
+         <div class="clearfix grpelem" id="u27296-9"><!-- content -->
+          <p id="u27296-2">III Convención Nacional</p>
+          <p id="u27296-4">Protección Civil</p>
+          <p id="u27296-7"><span id="u27296-5">SAN LUIS POTOSÍ</span> | 2016</p>
+         </div>
         </div>
        </div>
+       <div class="clip_frame grpelem" id="u27771"><!-- svg -->
+        <img class="svg" id="u27772" src="images/logopc.svg?crc=3794957760" width="44" height="48" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
+       </div>
       </div>
-      <div class="clip_frame grpelem" id="u27771"><!-- svg -->
-       <img class="svg" id="u27772" src="images/logopc.svg?crc=3794957760" width="44" height="48" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
+      <div class="clip_frame grpelem" id="u36910"><!-- svg -->
+       <img class="svg" id="u36906" src="images/gobmxlogo.svg?crc=1878811" width="126" height="39" alt="" data-mu-svgfallback="images/gobmxlogo_poster_.png?crc=3819646527"/>
+      </div>
+      <div class="clip_frame grpelem" id="u36924"><!-- svg -->
+       <img class="svg" id="u36920" src="images/logo_mexico.svg?crc=3762957058" width="172" height="70" alt="" data-mu-svgfallback="images/logo_mexico_poster_.png?crc=4197092919"/>
       </div>
      </div>
     </div>
@@ -639,8 +626,8 @@ Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.initWidget('#slideshowu20080', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:false,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); $(elem).data('widget', widget); return widget; });/* #slideshowu20080 */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 $('#slideshowu20080').registerSlideshowScrollEffect([{"in":[-Infinity,-6],"play":false},{"in":[-6,Infinity],"play":50}]);/* scroll effect */
-$('#u25804-6').registerOpacityScrollEffect([{"fade":109.9,"in":[-Infinity,92.9],"opacity":100},{"in":[92.9,92.9],"opacity":50},{"fade":70.1,"in":[92.9,Infinity],"opacity":0}]);/* scroll effect */
-$('#u25808').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,167.9],"opacity":100},{"in":[167.9,167.9],"opacity":50},{"fade":50,"in":[167.9,Infinity],"opacity":0}]);/* scroll effect */
+$('#u25804-6').registerOpacityScrollEffect([{"in":[-Infinity,92.9],"fade":109.9,"opacity":100},{"in":[92.9,92.9],"opacity":50},{"in":[92.9,Infinity],"fade":70.1,"opacity":0}]);/* scroll effect */
+$('#u25808').registerOpacityScrollEffect([{"in":[-Infinity,167.9],"fade":50,"opacity":100},{"in":[167.9,167.9],"opacity":50},{"in":[167.9,Infinity],"fade":50,"opacity":0}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(a){if(a&&"function"==typeof a.notify?a.notify():Muse.Assert.fail("Error calling selector function: "+a),false)throw a;}})})};
