--- a/expositores.html
+++ b/expositores.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Expositores</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=103117451"/>
-  <link rel="stylesheet" type="text/css" href="css/expositores.css?crc=3793378081" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4072327414"/>
+  <link rel="stylesheet" type="text/css" href="css/expositores.css?crc=4052535631" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_expositores.css?crc=3810368086"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_expositores.css?crc=3827241779"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -358,41 +358,29 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu154"><!-- group -->
-    <div class="browser_width" id="u154-bw">
-     <div id="u154"><!-- simple frame --></div>
-    </div>
-    <div class="clearfix" id="u750"><!-- group -->
-     <div class="clearfix" id="u718-8"><!-- content -->
-      <p id="u718-2">Convención Nacional</p>
-      <p id="u718-4">Protección Civil</p>
-      <p id="u718-6">SAN LUIS POTOSÍ * 2016</p>
-     </div>
-     <div class="clip_frame" id="u739"><!-- svg -->
-      <img class="svg" id="u735" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-     </div>
-    </div>
-    <div id="u28018-wrapper">
-     <div class="clearfix" id="u28018"><!-- group -->
-      <div id="u27257-wrapper">
-       <div class="clearfix" id="u27257"><!-- group -->
-        <div id="u27260-wrapper">
-         <div class="clip_frame" id="u27260"><!-- image -->
-          <img class="block" id="u27260_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
-         </div>
+   <div class="browser_width" id="u154-bw">
+    <div id="u154"><!-- simple frame --></div>
+   </div>
+   <div id="u28018-wrapper">
+    <div class="clearfix" id="u28018"><!-- group -->
+     <div id="u27257-wrapper">
+      <div class="clearfix" id="u27257"><!-- group -->
+       <div id="u27260-wrapper">
+        <div class="clip_frame" id="u27260"><!-- image -->
+         <img class="block" id="u27260_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
         </div>
-        <div class="clearfix" id="u27258"><!-- group -->
-         <div class="clearfix" id="u27259-9"><!-- content -->
-          <p id="u27259-2">III Convención Nacional</p>
-          <p id="u27259-4">Protección Civil</p>
-          <p id="u27259-7"><span id="u27259-5">SAN LUIS POTOSÍ</span> | 2016</p>
-         </div>
+       </div>
+       <div class="clearfix" id="u27258"><!-- group -->
+        <div class="clearfix" id="u27259-9"><!-- content -->
+         <p id="u27259-2">III Convención Nacional</p>
+         <p id="u27259-4">Protección Civil</p>
+         <p id="u27259-7"><span id="u27259-5">SAN LUIS POTOSÍ</span> | 2016</p>
         </div>
        </div>
       </div>
-      <div class="clip_frame" id="u27278"><!-- svg -->
-       <img class="svg" id="u27279" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-      </div>
+     </div>
+     <div class="clip_frame" id="u27278"><!-- svg -->
+      <img class="svg" id="u27279" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
      </div>
     </div>
    </div>
@@ -507,6 +495,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="SubMenu MenuLevel1 clearfix" id="u34138"><!-- vertical box -->
       <ul class="SubMenuView clearfix colelem" id="u34139"><!-- vertical box -->
        <li class="MenuItemContainer clearfix colelem" id="u34348"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34350" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34354-4"><!-- content --><p>Sede</p></div></a></li>
+       <li class="MenuItemContainer clearfix colelem" id="u36367"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u36370" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36372-4"><!-- content --><p>Video</p></div></a></li>
       </ul>
      </div>
     </div>
@@ -623,33 +612,31 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
    <a class="nonblock nontext Button clearfix" id="buttonu2989" href="registro.html"><!-- container box --><div class="clearfix grpelem" id="u2990-4"><!-- content --><p>REGISTRO</p></div></a>
    <div class="verticalspacer" data-offset-top="2156" data-content-above-spacer="2155" data-content-below-spacer="127"></div>
-   <div class="clearfix grpelem" id="u774"><!-- group -->
-    <div class="clearfix grpelem" id="u756-8"><!-- content -->
-     <p id="u756-2">Convención Nacional</p>
-     <p id="u756-4">Protección Civil</p>
-     <p id="u756-6">SAN LUIS POTOSÍ * 2016</p>
-    </div>
-    <div class="clip_frame grpelem" id="u754"><!-- svg -->
-     <img class="svg" id="u755" src="images/logopc.svg?crc=3794957760" width="32" height="32" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-    </div>
-   </div>
    <div class="browser_width grpelem" id="u493-bw">
     <div id="u493"><!-- group -->
      <div class="clearfix" id="u493_align_to_page">
-      <div class="clearfix grpelem" id="u27290"><!-- group -->
-       <div class="clip_frame grpelem" id="u27291"><!-- image -->
-        <img class="block" id="u27291_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="40" data-image-height="70"/>
-       </div>
-       <div class="clearfix grpelem" id="u27293"><!-- group -->
-        <div class="clearfix grpelem" id="u27296-9"><!-- content -->
-         <p id="u27296-2">III Convención Nacional</p>
-         <p id="u27296-4">Protección Civil</p>
-         <p id="u27296-7"><span id="u27296-5">SAN LUIS POTOSÍ</span> | 2016</p>
+      <div class="clearfix grpelem" id="pu27290"><!-- group -->
+       <div class="clearfix grpelem" id="u27290"><!-- group -->
+        <div class="clip_frame grpelem" id="u27291"><!-- image -->
+         <img class="block" id="u27291_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="40" data-image-height="70"/>
+        </div>
+        <div class="clearfix grpelem" id="u27293"><!-- group -->
+         <div class="clearfix grpelem" id="u27296-9"><!-- content -->
+          <p id="u27296-2">III Convención Nacional</p>
+          <p id="u27296-4">Protección Civil</p>
+          <p id="u27296-7"><span id="u27296-5">SAN LUIS POTOSÍ</span> | 2016</p>
+         </div>
         </div>
        </div>
+       <div class="clip_frame grpelem" id="u27771"><!-- svg -->
+        <img class="svg" id="u27772" src="images/logopc.svg?crc=3794957760" width="44" height="48" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
+       </div>
       </div>
-      <div class="clip_frame grpelem" id="u27771"><!-- svg -->
-       <img class="svg" id="u27772" src="images/logopc.svg?crc=3794957760" width="44" height="48" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
+      <div class="clip_frame grpelem" id="u36910"><!-- svg -->
+       <img class="svg" id="u36906" src="images/gobmxlogo.svg?crc=1878811" alt="" data-mu-svgfallback="images/gobmxlogo_poster_.png?crc=3819646527" data-image-width="126" data-image-height="39"/>
+      </div>
+      <div class="clip_frame grpelem" id="u36924"><!-- svg -->
+       <img class="svg" id="u36920" src="images/logo_mexico.svg?crc=3762957058" alt="" data-mu-svgfallback="images/logo_mexico_poster_.png?crc=4197092919" data-image-width="172" data-image-height="70"/>
       </div>
      </div>
     </div>
