--- a/presentaciones.html
+++ b/presentaciones.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Presentaciones</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
-  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=3764751454"/>
-  <link rel="stylesheet" type="text/css" href="css/presentaciones.css?crc=414880142" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_menu-descargas.css?crc=340124142"/>
+  <link rel="stylesheet" type="text/css" href="css/presentaciones.css?crc=3805150289" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_presentaciones.css?crc=347518926"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_presentaciones.css?crc=4031558529"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -29,7 +29,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n6,n7,n3,n4,i3,i4:default.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4,i3,n6,n7,n3,i4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -39,68 +39,57 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
-    <div class="clearfix colelem" id="pu12998"><!-- group -->
-     <div class="clearfix grpelem" id="u12998"><!-- group -->
-      <div class="clearfix grpelem" id="u12999-8"><!-- content -->
-       <p id="u12999-2">Convención Nacional</p>
-       <p id="u12999-4">Protección Civil</p>
-       <p id="u12999-6">SAN LUIS POTOSÍ * 2016</p>
-      </div>
-      <div class="clip_frame grpelem" id="u13000"><!-- svg -->
-       <img class="svg" id="u13001" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-      </div>
-     </div>
-     <div class="browser_width grpelem" id="u12918-bw">
-      <div id="u12918"><!-- group -->
-       <div class="clearfix" id="u12918_align_to_page">
-        <div class="clearfix grpelem" id="u12997-4"><!-- content -->
-         <p>9 - 11 NOVIEMBRE • SAN LUIS POTOSÍ, MX</p>
+    <div class="browser_width colelem" id="u12918-bw">
+     <div id="u12918"><!-- group -->
+      <div class="clearfix" id="u12918_align_to_page">
+       <div class="clearfix grpelem" id="u12997-4"><!-- content -->
+        <p>9 - 11 NOVIEMBRE • SAN LUIS POTOSÍ, MX</p>
+       </div>
+       <nav class="MenuBar clearfix grpelem" id="menuu13702"><!-- horizontal box -->
+        <div class="MenuItemContainer clearfix grpelem" id="u13703"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u13706" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u13707-4"><!-- content --><p>Inicio</p></div></a>
         </div>
-        <nav class="MenuBar clearfix grpelem" id="menuu13702"><!-- horizontal box -->
-         <div class="MenuItemContainer clearfix grpelem" id="u13703"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u13706" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u13707-4"><!-- content --><p>Inicio</p></div></a>
+        <div class="MenuItemContainer clearfix grpelem" id="u34161"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34162" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34163-4"><!-- content --><p>Convencion</p></div><div class="transition grpelem" id="u34164"><!-- content --></div></a>
+         <div class="SubMenu MenuLevel1 clearfix" id="u34166"><!-- vertical box -->
+          <ul class="SubMenuView clearfix colelem" id="u34167"><!-- vertical box -->
+           <li class="MenuItemContainer clearfix colelem" id="u34381"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34383" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34387-4"><!-- content --><p>Sede</p></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u36346"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u36347" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36350-4"><!-- content --><p>Video</p></div></a></li>
+          </ul>
          </div>
-         <div class="MenuItemContainer clearfix grpelem" id="u34161"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34162" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34163-4"><!-- content --><p>Convencion</p></div><div class="transition grpelem" id="u34164"><!-- content --></div></a>
-          <div class="SubMenu MenuLevel1 clearfix" id="u34166"><!-- vertical box -->
-           <ul class="SubMenuView clearfix colelem" id="u34167"><!-- vertical box -->
-            <li class="MenuItemContainer clearfix colelem" id="u34381"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34383" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34387-4"><!-- content --><p>Sede</p></div></a></li>
-           </ul>
+        </div>
+        <div class="MenuItemContainer clearfix grpelem" id="u31522"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u31523" href="expositores.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u31524-4"><!-- content --><p>Expositores</p></div></a>
+        </div>
+        <div class="MenuItemContainer clearfix grpelem" id="u14323"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u14324" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14327-4"><!-- content --><p>Descargas</p></div><div class="transition grpelem" id="u14325"><!-- content --></div></a>
+         <div class="SubMenu MenuLevel1 clearfix" id="u14328"><!-- vertical box -->
+          <ul class="SubMenuView clearfix colelem" id="u14329"><!-- vertical box -->
+           <li class="MenuItemContainer clearfix colelem" id="u14418"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14420" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14424-4"><!-- content --><h6>Galeria</h6></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u14512"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14515" href="agenda.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14517-4"><!-- content --><h6>Agenda</h6></div></a></li>
+           <li class="MenuItemContainer clearfix colelem" id="u14597"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u14600" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14603-4"><!-- content --><h6>Presentaciones</h6></div></a></li>
+          </ul>
+         </div>
+        </div>
+        <div class="MenuItemContainer clearfix grpelem" id="u35434"><!-- vertical box -->
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35458" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35461-4"><!-- content --><p>Registro</p></div></a>
+        </div>
+       </nav>
+       <div class="clearfix grpelem" id="u28141"><!-- group -->
+        <div class="clearfix grpelem" id="u27483"><!-- group -->
+         <div class="clip_frame grpelem" id="u27486"><!-- image -->
+          <img class="block" id="u27486_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
+         </div>
+         <div class="clearfix grpelem" id="u27484"><!-- group -->
+          <div class="clearfix grpelem" id="u27485-9"><!-- content -->
+           <p id="u27485-2">III Convención Nacional</p>
+           <p id="u27485-4">Protección Civil</p>
+           <p id="u27485-7"><span id="u27485-5">SAN LUIS POTOSÍ</span> | 2016</p>
           </div>
          </div>
-         <div class="MenuItemContainer clearfix grpelem" id="u31522"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u31523" href="expositores.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u31524-4"><!-- content --><p>Expositores</p></div></a>
-         </div>
-         <div class="MenuItemContainer clearfix grpelem" id="u14323"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u14324" href="descargas.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u14327-4"><!-- content --><p>Descargas</p></div><div class="transition grpelem" id="u14325"><!-- content --></div></a>
-          <div class="SubMenu MenuLevel1 clearfix" id="u14328"><!-- vertical box -->
-           <ul class="SubMenuView clearfix colelem" id="u14329"><!-- vertical box -->
-            <li class="MenuItemContainer clearfix colelem" id="u14418"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14420" href="galeria.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14424-4"><!-- content --><h6>Galeria</h6></div></a></li>
-            <li class="MenuItemContainer clearfix colelem" id="u14512"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u14515" href="agenda.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14517-4"><!-- content --><h6>Agenda</h6></div></a></li>
-            <li class="MenuItemContainer clearfix colelem" id="u14597"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u14600" href="presentaciones.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap Submenu clearfix grpelem" id="u14603-4"><!-- content --><h6>Presentaciones</h6></div></a></li>
-           </ul>
-          </div>
-         </div>
-         <div class="MenuItemContainer clearfix grpelem" id="u35434"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u35458" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u35461-4"><!-- content --><p>Registro</p></div></a>
-         </div>
-        </nav>
-        <div class="clearfix grpelem" id="u28141"><!-- group -->
-         <div class="clearfix grpelem" id="u27483"><!-- group -->
-          <div class="clip_frame grpelem" id="u27486"><!-- image -->
-           <img class="block" id="u27486_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
-          </div>
-          <div class="clearfix grpelem" id="u27484"><!-- group -->
-           <div class="clearfix grpelem" id="u27485-9"><!-- content -->
-            <p id="u27485-2">III Convención Nacional</p>
-            <p id="u27485-4">Protección Civil</p>
-            <p id="u27485-7"><span id="u27485-5">SAN LUIS POTOSÍ</span> | 2016</p>
-           </div>
-          </div>
-         </div>
-         <div class="clip_frame grpelem" id="u27524"><!-- svg -->
-          <img class="svg" id="u27525" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-         </div>
+        </div>
+        <div class="clip_frame grpelem" id="u27524"><!-- svg -->
+         <img class="svg" id="u27525" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
         </div>
        </div>
       </div>
@@ -347,35 +336,29 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="1432" data-content-above-spacer="1431" data-content-below-spacer="62"></div>
-    <div class="clearfix colelem" id="pu13003"><!-- group -->
-     <div class="clearfix grpelem" id="u13003"><!-- group -->
-      <div class="clearfix grpelem" id="u13006-8"><!-- content -->
-       <p id="u13006-2">Convención Nacional</p>
-       <p id="u13006-4">Protección Civil</p>
-       <p id="u13006-6">SAN LUIS POTOSÍ * 2016</p>
-      </div>
-      <div class="clip_frame grpelem" id="u13004"><!-- svg -->
-       <img class="svg" id="u13005" src="images/logopc.svg?crc=3794957760" width="32" height="32" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-      </div>
-     </div>
-     <div class="browser_width grpelem" id="u13002-bw">
-      <div id="u13002"><!-- group -->
-       <div class="clearfix" id="u13002_align_to_page">
-        <div class="clearfix grpelem" id="u27488"><!-- group -->
-         <div class="clip_frame grpelem" id="u27489"><!-- image -->
-          <img class="block" id="u27489_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="40" data-image-height="70"/>
+    <div class="browser_width colelem" id="u13002-bw">
+     <div id="u13002"><!-- group -->
+      <div class="clearfix" id="u13002_align_to_page">
+       <div class="clearfix grpelem" id="u27488"><!-- group -->
+        <div class="clip_frame grpelem" id="u27489"><!-- image -->
+         <img class="block" id="u27489_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="40" data-image-height="70"/>
+        </div>
+        <div class="clearfix grpelem" id="u27491"><!-- group -->
+         <div class="clearfix grpelem" id="u27494-9"><!-- content -->
+          <p id="u27494-2">III Convención Nacional</p>
+          <p id="u27494-4">Protección Civil</p>
+          <p id="u27494-7"><span id="u27494-5">SAN LUIS POTOSÍ</span> | 2016</p>
          </div>
-         <div class="clearfix grpelem" id="u27491"><!-- group -->
-          <div class="clearfix grpelem" id="u27494-9"><!-- content -->
-           <p id="u27494-2">III Convención Nacional</p>
-           <p id="u27494-4">Protección Civil</p>
-           <p id="u27494-7"><span id="u27494-5">SAN LUIS POTOSÍ</span> | 2016</p>
-          </div>
-          <div class="clip_frame grpelem" id="u27492"><!-- svg -->
-           <img class="svg" id="u27493" src="images/logopc.svg?crc=3794957760" width="50" height="47" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
-          </div>
+         <div class="clip_frame grpelem" id="u27492"><!-- svg -->
+          <img class="svg" id="u27493" src="images/logopc.svg?crc=3794957760" width="50" height="47" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
          </div>
         </div>
+       </div>
+       <div class="clip_frame grpelem" id="u37058"><!-- svg -->
+        <img class="svg" id="u37059" src="images/gobmxlogo.svg?crc=1878811" alt="" data-mu-svgfallback="images/gobmxlogo_poster_.png?crc=3819646527" data-image-width="126" data-image-height="39"/>
+       </div>
+       <div class="clip_frame grpelem" id="u37060"><!-- svg -->
+        <img class="svg" id="u37061" src="images/logo_mexico.svg?crc=3762957058" alt="" data-mu-svgfallback="images/logo_mexico_poster_.png?crc=4197092919" data-image-width="172" data-image-height="70"/>
        </div>
       </div>
      </div>
