--- a/video.html
+++ b/video.html
@@ -11,17 +11,17 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "convencion.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "video.css"], "outOfDate":[]};
 </script>
   
-  <title>Convencion</title>
+  <title>Video</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=376139143"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra.css?crc=4072327414"/>
-  <link rel="stylesheet" type="text/css" href="css/convencion.css?crc=197909425" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/video.css?crc=4152373182" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_convencion.css?crc=3929942562"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_video.css?crc=3895424595"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -34,93 +34,45 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-   </head>
+    <!--HTML Widget code-->
+  <style type="text/css">#u36625.size_fluid_width_height iframe { position:absolute; left:0; top:0; }</style>
+ </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="browser_width" id="u154-bw">
-    <div id="u154"><!-- simple frame --></div>
-   </div>
-   <div class="clip_frame grpelem" id="u31252"><!-- image -->
-    <img class="block" id="u31252_img" src="images/bg-quote.png?crc=3964572447" alt="" data-image-width="157" data-image-height="202"/>
-   </div>
-   <div id="u28018-wrapper">
-    <div class="clearfix" id="u28018"><!-- group -->
-     <div id="u27257-wrapper">
-      <div class="clearfix" id="u27257"><!-- group -->
-       <div id="u27260-wrapper">
-        <div class="clip_frame" id="u27260"><!-- image -->
-         <img class="block" id="u27260_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
+   <div class="clearfix grpelem" id="pu154"><!-- group -->
+    <div class="browser_width" id="u154-bw">
+     <div id="u154"><!-- simple frame --></div>
+    </div>
+    <div id="u28018-wrapper">
+     <div class="clearfix" id="u28018"><!-- group -->
+      <div id="u27257-wrapper">
+       <div class="clearfix" id="u27257"><!-- group -->
+        <div id="u27260-wrapper">
+         <div class="clip_frame" id="u27260"><!-- image -->
+          <img class="block" id="u27260_img" src="images/grecas.png?crc=3872280243" alt="" data-image-width="52" data-image-height="90"/>
+         </div>
         </div>
-       </div>
-       <div class="clearfix" id="u27258"><!-- group -->
-        <div class="clearfix" id="u27259-9"><!-- content -->
-         <p id="u27259-2">III Convención Nacional</p>
-         <p id="u27259-4">Protección Civil</p>
-         <p id="u27259-7"><span id="u27259-5">SAN LUIS POTOSÍ</span> | 2016</p>
+        <div class="clearfix" id="u27258"><!-- group -->
+         <div class="clearfix" id="u27259-9"><!-- content -->
+          <p id="u27259-2">III Convención Nacional</p>
+          <p id="u27259-4">Protección Civil</p>
+          <p id="u27259-7"><span id="u27259-5">SAN LUIS POTOSÍ</span> | 2016</p>
+         </div>
         </div>
        </div>
       </div>
-     </div>
-     <div class="clip_frame" id="u27278"><!-- svg -->
-      <img class="svg" id="u27279" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
+      <div class="clip_frame" id="u27278"><!-- svg -->
+       <img class="svg" id="u27279" src="images/logopc.svg?crc=3794957760" width="50" height="50" alt="" data-mu-svgfallback="images/logopc_poster_.png?crc=441458290"/>
+      </div>
      </div>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu14802-4"><!-- column -->
-    <div class="T-tulo-Principal clearfix colelem" id="u14802-4"><!-- content -->
-     <h1>Objetivos</h1>
-    </div>
-    <div class="clearfix colelem" id="pu31248"><!-- group -->
-     <div class="grpelem" id="u31248"><!-- simple frame --></div>
-     <div class="clip_frame grpelem" id="u14792"><!-- image -->
-      <img class="block" id="u14792_img" src="images/mg_9611-crop-u14792.jpg?crc=4069154623" alt="" data-image-width="839" data-image-height="222"/>
-     </div>
-     <div class="Subtitulo-2 clearfix grpelem" id="u14799-4"><!-- content -->
-      <h3>Representantes gubernamentales y expertos en Protección Civil se reunirán en San Luis Potosí este mes de noviembre para la III Convención Nacional de Protección Civil. Únase a nosotros para el evento de Protección Civil más importante del país.</h3>
-     </div>
-     <div class="clearfix grpelem" id="u31251-15"><!-- content -->
-      <div id="u31251-14">
-       <p id="u31251">&nbsp;</p>
-       <p id="u31251-2">&nbsp;</p>
-       <p id="u31251-4">La fuerza de la naturaleza no se puede detener,</p>
-       <p id="u31251-6">pero salvaguardar vidas si es posible”</p>
-       <p>&nbsp;</p>
-       <p id="u31251-9">Luis Felipe Puente Espinoza</p>
-       <p class="Parrafo" id="u31251-11">Coordinador Nacional de Protección Civil</p>
-       <p>&nbsp;</p>
-       <p>&nbsp;</p>
-      </div>
-     </div>
-     <div class="Parrafo clearfix grpelem" id="u31261-32"><!-- content -->
-      <p>La III Convención Nacional de Protección Civil reunirá a los principales personajes y los últimos avances en este campo en rápida evolución.</p>
-      <p>&nbsp;</p>
-      <p>Durante tres días, los participantes tendrán una oportunidad única de participar en debates de alto nivel y examinar a detalle la Protección Civil, integrarse a sesiones de trabajo que se pueden mezclar y combinar a través de diversas corrientes: la comprensión y gestión de riesgos.</p>
-      <p>&nbsp;</p>
-      <p>Conexión con otros líderes, aprender de los estudios de casos de la vida real y ayudar a dar forma al diálogo emergente, los participantes podrán sumergirse en un esfuerzo colectivo para gestionar los riesgos y maximizar las oportunidades.</p>
-      <p>&nbsp;</p>
-      <p>Invitar a la reflexión a través de las plenarias, talleres interactivos y sesiones de paneles animados que&nbsp; permitirá a los participantes:</p>
-      <p>&nbsp;</p>
-      <ul class="list0 nls-None" id="u31261-15">
-       <li>Identificar los riesgos más relevantes.</li>
-      </ul>
-      <ul class="list0 nls-None" id="u31261-18">
-       <li>Comprender las consecuencias de una mala gestión del riesgo.</li>
-      </ul>
-      <ul class="list0 nls-None" id="u31261-21">
-       <li>Desarrollar estrategias para evitar perdidas humanas.</li>
-      </ul>
-      <ul class="list0 nls-None" id="u31261-24">
-       <li>Navegar a través de la gama de instrumentos de la Protección Civil disponibles.</li>
-      </ul>
-      <ul class="list0 nls-None" id="u31261-27">
-       <li>Comprender cómo una mejor gestión del riesgo puede ayudar a crear una ventaja.</li>
-      </ul>
-      <ul class="list0 nls-None" id="u31261-30">
-       <li>Tener en cuenta el impacto del cambio climático.</li>
-      </ul>
-     </div>
-    </div>
+   <div class="size_fluid_width_height grpelem" id="u36625"><!-- custom html -->
+    <div class="fluid_height_spacer"></div>
+     
+<iframe class="actAsDiv" style="width:100%;height:100%;" src="http://www.youtube.com/embed/ZInjsZuTSww?autoplay=1&loop=1&playlist=ZInjsZuTSww&showinfo=0&theme=dark&color=red&controls=0&modestbranding=1&start=0&fs=0&iv_load_policy=3&wmode=transparent&rel=0" frameborder="0" allowfullscreen></iframe>
+
    </div>
    <div class="clearfix grpelem" id="pmenuu167"><!-- group -->
     <nav class="MenuBar clearfix" id="menuu167"><!-- horizontal box -->
@@ -128,11 +80,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u171" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u174-4"><!-- content --><p>Inicio</p></div></a>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u34133"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u34134" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34135-4"><!-- content --><p>Convencion</p></div><div class="transition grpelem" id="u34136"><!-- content --></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u34134" href="convencion.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34135-4"><!-- content --><p>Convencion</p></div><div class="transition grpelem" id="u34136"><!-- content --></div></a>
       <div class="SubMenu MenuLevel1 clearfix" id="u34138"><!-- vertical box -->
        <ul class="SubMenuView clearfix colelem" id="u34139"><!-- vertical box -->
         <li class="MenuItemContainer clearfix colelem" id="u34348"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u34350" href="sede.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u34354-4"><!-- content --><p>Sede</p></div></a></li>
-        <li class="MenuItemContainer clearfix colelem" id="u36367"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u36370" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36372-4"><!-- content --><p>Video</p></div></a></li>
+        <li class="MenuItemContainer clearfix colelem" id="u36367"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u36370" href="video.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u36372-4"><!-- content --><p>Video</p></div></a></li>
        </ul>
       </div>
      </div>
@@ -160,7 +112,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <a class="nonblock nontext Button clearfix" id="buttonu2989" href="registro.html"><!-- container box --><div class="clearfix grpelem" id="u2990-4"><!-- content --><p>REGISTRO</p></div></a>
-   <div class="verticalspacer" data-offset-top="1038" data-content-above-spacer="1037" data-content-below-spacer="127"></div>
+   <div class="verticalspacer" data-offset-top="553" data-content-above-spacer="553" data-content-below-spacer="128"></div>
    <div class="browser_width grpelem" id="u493-bw">
     <div id="u493"><!-- group -->
      <div class="clearfix" id="u493_align_to_page">
